# deeplearning2.0

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements-gpu.txt
configs/: project.yaml
configs/data/: dataset.yaml
configs/evaluation/: evaluation.yaml  ssd.yaml
configs/experiments/: ablation_matrix.yaml
configs/experiments/ablation/: ablation_core_axes.yaml
configs/experiments/baseline/: baseline_water.yaml
configs/experiments/deep/: direct_joint_water.yaml
configs/experiments/transfer/: pretrain_water_finetune_soil.yaml
configs/features/: chemical_features.yaml
configs/inference/: prediction.yaml
configs/models/: baseline.yaml  deep_multitask.yaml  transfer_learning.yaml
configs/tasks/: target_spaces.yaml  task_semantics.yaml
configs/training/: joint_training.yaml
docs/: data_entrypoint_audit.md  developer_workflow.md  environment_setup.md  environment_validation_report.md  experiment_matrix.md  model_execution_contracts.md  parallel_workstreams.md  project_roadmap.md  runbook.md  shared_contracts.md  统一多任务残差QSAR架构说明.md
scripts/: audit_sqlite_entrypoint.py  bootstrap_check.py  list_experiments.py  list_task_inventory.py  verify_gpu_environment.py
src/deeplearning2/: __init__.py  paths.py
src/deeplearning2/cli/: main.py  runs.py
src/deeplearning2/config/: __init__.py  loader.py  registry.py
src/deeplearning2/data/: __init__.py  contracts.py  dataset_schema.py  sqlite.py
src/deeplearning2/evaluation/: __init__.py
src/deeplearning2/models/: __init__.py
src/deeplearning2/plotting/: __init__.py
src/deeplearning2/predict/: __init__.py  schemas.py
tests/: test_ad_uncertainty_contracts.py  test_configs.py  test_model_contracts.py  test_prediction_ssd_contracts.py  test_project_structure.py  test_runbook_cli.py  test_shared_contracts.py  test_sqlite_entrypoint.py  test_task_inventory.py
(+37 files in other folders)
